--- a/index.html
+++ b/index.html
@@ -58,11 +58,30 @@
     <!-- end header -->
     <!-- main -->
          <main>
+            <section class="bg-white dark:bg-gray-900">
+                <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 xl:px-0 lg:py-6 lg:grid-cols-12">
+                    <div class="mr-auto place-self-center lg:col-span-7">
+                        <h1 class="max-w-2xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Here the best product in Our shop</h1>
+                        <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">From checkout to global sales tax compliance, companies around the world use Flowbite to simplify their payment stack.</p>
+                        <a href="#" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-blue-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+                            Show More Detail
+                            <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                        </a>
+                        <a href="#" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-blue-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+                            Speak to Sales
+                        </a> 
+                    </div>
+                    <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+                        <img src="https://i.pinimg.com/564x/91/19/3c/91193c52cb041360692585d93dc143a2.jpg" alt="mockup" class="rounded">
+                    </div>                
+                </div>
+            </section>
             <h1 class="text-center text-3xl pb-6 font-bold text-blue-500">Products</h1>
             <!-- product section -->
-                <section class="grid grid-cols-1 max-w-sm  mx-auto   sm:max-w-2xl md:max-w-4xl  lg:max-w-7xl sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-4 xl:mx-auto xl:max-w-screen-xl gap-6 p-4 xl:p-0" id="render-Area">  
+            <section class="grid grid-cols-1 max-w-sm  mx-auto   sm:max-w-2xl md:max-w-4xl  lg:max-w-7xl sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-4 xl:mx-auto xl:max-w-screen-xl gap-6 p-4 xl:p-0" id="render-Area">  
                     <!-- render from js -->
-                </section>
+            </section>
+             
             <!-- end product  -->
             <!-- users section -->
             <p class="text-3xl text-center pt-12 pb-5 font-bold text-blue-500">Users</p>
